[package]
name = "tivilsta"
version = "0.3.0"
description = "A different whitelisting mechanism for blocklist maintainers."

categories = ["command-line-utilities", "parser-implementations"]
keywords = ["whitelist", "whitelisting", "tool", "blocklist", "tivilsta"]

license = "Apache-2.0"
readme = "README.md"
authors = ["Nissar Chababy <contact@funilrys.com>"]
repository = "https://github.com/funilrys/tivilsta"

edition = "2021"

[badges]
maintenance = { status = "actively-developed"}

[lib]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3", features = ["derive"] }
serde_json = "1"
tempfile = "3"
fancy-regex = "0.10"
rand = "0.8"
