[package]
name = "tivilsta"
version = "0.5.0"
description = "A different whitelisting mechanism for blocklist maintainers."

categories = ["command-line-utilities", "parser-implementations"]
keywords = ["whitelist", "whitelisting", "tool", "blocklist", "tivilsta"]

license = "Apache-2.0"
readme = "README.md"
authors = ["Nissar Chababy <contact@funilrys.com>"]
repository = "https://github.com/funilrys/tivilsta"

edition = "2021"

[badges]
maintenance = { status = "actively-developed"}

[lib]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "3.2", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
fancy-regex = "0.13"
rand = "0.8"
urlparse = "0.7"
idna = "0.5"

